[package]
name = "website"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
subprocess.workspace = true
anyhow.workspace = true
askama = { version = "0.15", default-features = false, features = ["std", "derive"] }
semver = "1.0.23"
devserver_lib = { version = "0.4.2", default-features = false }
clap.workspace = true