[package]
name = "windsock"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
clap.workspace = true
docker-compose-runner = "0.1.0"
tokio.workspace = true

[dev-dependencies]
scylla = { version = "0.7.0", features = ["ssl"] }
