[package]
name = "windsock"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait = "0.1.68"
bincode.workspace = true
clap.workspace = true
console = "0.15.5"
copy_dir = "0.1.2"
serde = { workspace = true, features = ["derive"] }
strum = { version = "0.26.0", features = ["derive"] }
time = { version = "0.3.25", features = ["serde"] }
tokio.workspace = true

[dev-dependencies]
scylla = { version = "0.12.0", features = ["ssl"] }
docker-compose-runner = "0.3.0"
